<resources>
    <string name="app_name">AXP Merchants</string>
    <string name="action_Logoff">Logoff</string>
    <string name="btn_new">New</string>
    <string name="btn_summary">Summary</string>
    <string name="item_title">Spend 20$ and get 5$ off</string>
    <string name="item_subtitle">From YYYY-MM-DD to YYYY-MM-DD</string>
    <string name="item_tooltip">See promotion details for promotion %s</string>
    <string name="item_status_active">Active</string>
    <string name="item_status_draft">Draft</string>
    <string name="item_status_expired">Expired</string>
    <string name="radio_btn_One_Percent">1</string>
    <string name="radio_btn_Five_Percent">5</string>
    <string name="radio_btn_Ten_Percent">10</string>

    <!-- summary view-->
    <string name="view_bonus_amount">Bonus amount: %1$,.2f USD</string>
    <string name="view_trans_amount">Minimum amount: %1$,.2f USD</string>
    <string name="view_start_dt">Start date: %s</string>
    <string name="view_end_dt">End date: %s</string>

    <string-array name="offer_type">
        <item>Statement Credit</item>
        <item>Cash Back</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_promotions">Promotions</string>
    <string name="title_activity_promotion_setup">Offer Setup</string>

    <string name="hello_world">Hello world!</string>
    <string name="Radio_Btn_Cash_Back">Cash Back</string>
    <string name="Offer">Statement Credit Offer Description</string>
    <string name="Minimum_Spend">Minimum Amount to Spend</string>
    <string name="Bonus_Amount">Bonus Amount</string>
    <string name="Start_Date">Start Date</string>
    <string name="End_Date">End Date</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_promotion_summary">PromotionSummary</string>
    <string name="action_settings">Settings</string>
</resources>
