<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="?android:dividerVertical"
    android:dividerPadding="8dp"
    android:showDividers="middle"
    android:id="@+id/promo_row">

    <!--
        Any view or view group can become interactive by simply setting the
        android:clickable and android:focusable attributes to true.

        When doing this, make sure to provide adequate touch feedback by also
        setting the view background to ?android:selectableItemBackground. When
        using the Holo theme, this drawable is transparent by default, but
        changes to a translucent color overlay when the view is pressed or
        focused.
    -->
    <LinearLayout android:id="@+id/primary_target"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:background="?android:selectableItemBackground">

        <TextView style="?android:textAppearanceListItemSmall"
            android:id="@+id/promo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_title"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/promo_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_subtitle"
            android:textSize="12sp" />

    </LinearLayout>

    <!--
        When using the Holo theme, setting a Button or ImageButton to
        ?android:borderlessButtonStyle removes its border and sets the
        background to ?android:selectableItemBackground, as described above.
    -->
    <ImageButton
        android:layout_width="@dimen/standard_touch_target_size"
        android:layout_height="match_parent"
        android:id="@+id/imageButton"
        android:src="@drawable/ic_av_timer_white_24dp"
        style="?android:borderlessButtonStyle"
        android:contentDescription="@string/item_status"
        android:longClickable="false" />

    <ImageButton android:id="@+id/secondary_action"
        style="?android:borderlessButtonStyle"
        android:layout_width="@dimen/standard_touch_target_size"
        android:layout_height="match_parent"
        android:src="@drawable/ic_settings_white_36dp"
        android:contentDescription="@string/item_tooltip" />

</LinearLayout>
