<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hackaton.promotionsetup.activities.PromotionSetup"
    android:id="@+id/promoSetup">

    <TextView android:text="@string/Offer" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/offerText"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Offer description" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/bonusAmount"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/offerText"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Bonus Amount" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/transactionAmount"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bonusAmount"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Minium spend Amount" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/offerStartDate"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/transactionAmount"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Offer Start Date" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/offerEndDate"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/offerStartDate"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Offer End Date" />


    <Button android:id="@+id/submit_button" style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="120dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/offerEndDate"
        android:enabled="true" />


    <Button android:id="@+id/cancel_button" style="?android:textAppearanceSmall"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/offerEndDate"
        android:layout_toRightOf="@+id/submit_button"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:elegantTextHeight="true"
        android:clickable="true"
        android:hint="Offer Start Date" />


</RelativeLayout>
